fix: Fixing alignment and style for the receipt page
fix: Fixing voucher button color and general basket style

fix: fixing width of the basket container

fix: Minor padding and margin fixes

fix: Fixing minor comments on variables.scss

--- a/ecommerce/regis/static/sass/base/_basket.scss
+++ b/ecommerce/regis/static/sass/base/_basket.scss
@@ -1,36 +1,75 @@
 // Basket styles ecommerce/ecommerce/static/sass/partials/views/_basket.scss.
 
 .basket {
+  font-family: $font-family-primary;
+
   .container {
-    padding: 45px 20px 30px;
+    padding: 45px 55px 30px;
+    margin: 0;
+    width: 100%;
+    max-width: 1170px;
+    margin: 0 auto;
 
     h3 {
       margin-bottom: 30px;
+      color: black;
     }
 
     .basket-items {
       border: 1px solid $gray;
       padding: 20px;
       margin-bottom: 45px;
+      font-family: $font-family-primary;
+
+      .row {
+        margin: 0;
+
+        .product-image {
+          margin-bottom: 20px;
+        }
+
+        .product-title {
+          font-family: $font-family-primary;
+          font-weight: 500;
+          font-size: 18px;
+          line-height: 28px;
+          color: black;
+        }
+
+        .product-prices {
+          width: fit-content;
+          padding: 0;
+          
+          .discount {
+            margin: 0;
+            display: block;
+
+            .benefit {
+              display: block;
+            }
+
+            & > div {
+              margin: 0;
+              font-weight: 500;
+              font-size: 18px;
+              line-height: 28px;
+            }
+          }
+
+          .price,
+          .price.discounted {
+            color: black;
+            font-weight: 500;
+            font-size: 18px;
+            line-height: 28px;
+          }
+        }
+      }
     }
 
     .payment-buttons {
       .payment-button {
-        border-color: $contrast-color;
-        padding: 1em 3em;
-        background: $contrast-color;
-        border-radius: initial;
-        letter-spacing: 0.16em;
-        text-transform: uppercase;
-        font-size: 0.8em;
-
-        &:hover,
-        &.is-hovered,
-        &:focus,
-        &.is-focused {
-          border-color: $contrast-color;
-          background: $contrast-color;
-        }
+        @include primary-button-mixin;
       }
     }
 
@@ -43,7 +82,15 @@
 
     .total,
     #summary {
+      margin-right: 20px;
+
       .use-voucher {
+        padding: 0;
+
+        .code {
+          float: right;
+        }
+
         #voucher_form_link {
           @include float(right);
 
@@ -51,7 +98,19 @@
             color: $contrast-color;
             border: none;
             font-weight: 500;
+            font-size: 16px;
+            font-family: $font-family-primary;
           }
+        }
+
+        #voucher-form-container {
+          @include float(right);
+        }
+
+        #apply-voucher-button {
+          @include primary-button-mixin;
+
+          padding: 5px 10px;
         }
       }
 
@@ -66,6 +125,54 @@
           float: right;
         }
       }
+    }
+
+    #content-inner > .row {
+      margin: 0 20px;
+
+      .col-sm-12 {
+        padding: 0;
+      }
+    }
+  }
+}
+
+@media (max-width: $screen-sm-max) {
+  .basket {
+    font-family: $font-family-primary;
+  
+    .container {
+      padding: 45px 15px 30px;
+
+      .basket-items {
+        .row {
+          & > .col-sm-12 {
+            padding: 0;
+          }
+
+          .product-prices {
+            float: left !important;
+            margin-top: 0;
+
+            .discount {
+              text-align: left;
+            }
+
+            .price {
+              padding: 0;
+              float: left;
+            }
+          }
+        }
+      }
+
+      .total {
+        margin-right: 0;
+      }
+    }
+
+    #content-inner > .row {
+      margin: 0 !important;
     }
   }
 }
