--- a/ecommerce/regis/static/sass/base/_variables.scss
+++ b/ecommerce/regis/static/sass/base/_variables.scss
@@ -1,7 +1,41 @@
 // Regis theme definitions.
 
 $primary-color: #A52238;
+$primary-color-dark: #991F34;
 $body-bg: white;
 $gray: #DBDBDB;
 $main-elements-color: #242E33;
 $contrast-color: $primary-color;
+$font-family-primary: 'Roboto', 'Open Sans', sans;
+
+
+// Mixins
+
+@mixin primary-button-mixin(
+  $background: $primary-color,
+  $border: 1px solid $primary-color,
+  $color: white,
+  $background-active: $primary-color-dark,
+  $color-active: white,
+  $border-color-active: $primary-color-dark
+) {
+  background: $background;
+  border: $border;
+  font-weight: 500;
+  font-size: $font-size-small;
+  letter-spacing: 0.15em;
+  text-transform: uppercase;
+  border-radius: 0;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  transition: background 0.2s linear, border 0.2s linear, color 0.2s;
+  color: $color;
+
+  &:hover,
+  &:focus {
+    background: $background-active;
+    border-color: $border-color-active;
+    box-shadow: none;
+    color: $color-active;
+  }
+}
